tests/paczka2/big_fuzzy/43080966.err
Error in line 1: P2vT A342 5,57
Error in line 4: swJL S218 24,5
Error in line 10: swJL S218 19,8
Error in line 2: P2vT A342 8,0
Error in line 16: P2vT A291 34,6
Error in line 24: A342 S218 27,7
Error in line 22: J13FAaqDX A734 300,7
Error in line 36: GySSgdVD A342 175,4
Error in line 39: GySSgdVD A734 38,6
Error in line 50: J13FAaqDX A291 -3,2
Error in line 51: J13FAaqDX A34V V8,8
Error in line 48: AHUG0Gj2c S218 76,4
Error in line 49: v9rf8T8T A734 81,8
Error in line 45: J13FAaqDX A291 71,2
Error in line 65: GySSgdVD S218 -3,1
Error in line 64: GySSgdVD S218 98,3
Error in line 66: GySSgdVD A342 28,0
Error in line 52: swJL S218 48,2
Error in line 81: GySSgdVD A291 97,8
Error in line 92: P2vT A291 57,5
Error in line 73: v9rf8T8T A291 96,8
Error in line 99: v9rf8T8T S218 179,3
Error in line 101: A342 A734 207,3
Error in line 116: A342 S218 67,7
Error in line 118: A342 A342 9,6
Error in line 104: AHUG0Gj2c A342 48,5
Error in line 120: AHUG0Gj2c A734 53,5
Error in line 128: v9rf8T8T A342 47,8
Error in line 126: P2vT A342 6,3
Error in line 111: J13FAaqDX A342 170,6
Error in line 131: swJL A291 391,4
Error in line 138: AHUG0Gj2c A342 75,0
Error in line 143: P2vT A342 65,2
Error in line 140: swJL A342 33,4
Error in line 152: J13FAaqDX A342 82,7
Error in line 164: AHUG0Gj2c S218 92,1
Error in line 172: AHUG0Gj2c A734 -2,3
Error in line 175: P2vT A734 47,1
Error in line 170: AHUG0Gj2c A734 56,1
Error in line 181: GySSgdVD A342 93,8
Error in line 187: A342 A291 18,0
Error in line 197: swJL S218 -2,8
Error in line 191: swJL S218 40,1
Error in line 200: A342 A342 23,6
Error in line 206: AHUG0Gj2c A734 79,8
Error in line 215: GySSgdVD A291 98,0
Error in line 212: A342 A291 60,0
Error in line 230: P2vT A:34 2,0
Error in line 228: GySSgdVD S218 11,6
Error in line 234: v9rf8T8T A734 2,3
Error in line 237: GySSgdVD A342 40,9
Error in line 240: P2vT A734 0,3
